# mpris-rich-presence

./: Cargo.toml  README.md
src/: helpers.rs  main.rs  monitor.rs
