[package]
name = "mpris-rp"
version = "0.2.2"
authors = ["sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
chrono = "0.4"
discord-rich-presence = "0.2.0"